fix: remove overflow:hidden from heroSection - fixes animated word clipping

--- a/src/components/sections/HeroSection.module.css
+++ b/src/components/sections/HeroSection.module.css
@@ -5,7 +5,6 @@
   position: relative;
   width: 100%;
   min-height: 100vh;
-  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -106,9 +105,6 @@
   vertical-align: bottom;
   text-align: left;
   min-width: 0.1em;
-  overflow: hidden;
-  padding-bottom: 0.25em;
-  margin-bottom: -0.25em;
 }
 
 .dynamicWord {
